fix header shrink

--- a/public/srcdoc.html
+++ b/public/srcdoc.html
@@ -20,6 +20,7 @@
         let scriptEls = [];
         let styleEls = [];
         let origin;
+        let inspectModeEnabled = true;
 
         async function handleMessage(e) {
           const { action } = e.data;
@@ -65,13 +66,13 @@
           }
         }
 
-        document.body.addEventListener("click", (event) => {
-          if (event.which !== 1) return;
-          if (event.metaKey || event.ctrlKey || event.shiftKey) return;
-          if (event.defaultPrevented) return;
+        document.body.addEventListener("click", (e) => {
+          if (e.which !== 1) return;
+          if (e.metaKey || e.ctrlKey || e.shiftKey) return;
+          if (e.defaultPrevented) return;
 
           // ensure target is a link
-          let el = event.target;
+          let el = e.target;
           while (el && el.nodeName !== "A") el = el.parentNode;
           if (!el || el.nodeName !== "A") return;
 
@@ -82,7 +83,7 @@
           )
             return;
 
-          event.preventDefault();
+          e.preventDefault();
 
           if (el.href.startsWith(origin)) {
             const url = new URL(el.href);
@@ -94,6 +95,55 @@
 
           window.open(el.href, "_blank");
         });
+
+        window.addEventListener("mousemove", (e) => {
+          if (!inspectModeEnabled) return;
+          // console.log(e.target);
+        });
+
+        window.addEventListener("click", (e) => {
+          if (!inspectModeEnabled) return;
+          console.log(getDomPath(e.target));
+        });
+
+        function getDomPath(el) {
+          const stack = [];
+
+          while (el.parentNode !== null) {
+            let sibCount = 0;
+            let sibIndex = 0;
+            for (let i = 0; i < el.parentNode.childNodes.length; i += 1) {
+              const sib = el.parentNode.childNodes[i];
+              if (sib.nodeName === el.nodeName) {
+                if (sib === el) {
+                  sibIndex = sibCount;
+                  break;
+                }
+                sibCount += 1;
+              }
+            }
+
+            const nodeName = CSS.escape(el.nodeName.toLowerCase());
+
+            // Ignore `html` as a parent node
+            if (nodeName === "html") break;
+
+            if (el.hasAttribute("id") && el.id !== "") {
+              stack.unshift(`#${CSS.escape(el.id)}`);
+              // Remove this `break` if you want the entire path
+              break;
+            } else if (sibIndex > 0) {
+              // :nth-of-type is 1-indexed
+              stack.unshift(`${nodeName}:nth-of-type(${sibIndex + 1})`);
+            } else {
+              stack.unshift(nodeName);
+            }
+
+            el = el.parentNode;
+          }
+
+          return stack;
+        }
 
         window.addEventListener("message", handleMessage, false);
       })();
